--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.2.0
   flutter_bloc: ^8.1.4
   bloc: ^8.1.3
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
