--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,12 +48,13 @@ dependencies:
   path_provider: ^2.0.0
   path: ^1.8.3
   sqlite3: ^2.4.0
+  yandex_mapkit: ^4.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   drift_dev: ^2.15.0
-  build_runner: ^2.4.8
+  build_runner: ^2.4.9
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
