--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path: ^1.8.3
   sqlite3: ^2.4.0
   yandex_mapkit: ^4.0.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
