Added shared preferences. Updated map_bloc. Added points on map, bottomsheet

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   sqlite3: ^2.4.0
   yandex_mapkit: ^4.0.2
   equatable: ^2.0.5
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
