--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.2.3
   permission_handler: ^11.3.1
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
