--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   permission_handler: ^11.3.1
   firebase_core: ^2.31.0
   firebase_messaging: ^14.9.2
+  flutter_local_notifications: ^17.1.2
 
 dev_dependencies:
   flutter_test:
