Added icon for background notifications

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,13 @@
     <application
         android:label="coffee_shop"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_stat_coffee_icon">
+        <meta-data
+          android:name="com.google.firebase.messaging.default_notification_icon"
+          android:resource="@mipmap/ic_stat_coffee_icon" />
+          <meta-data
+          android:name="com.google.firebase.messaging.default_notification_color"
+          android:resource="@android:color/black" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
